<resources>
    <string name="app_name">Seen User</string>
    <string name="my_key">AIzaSyCh5hBReaLSROrja5l_F4k8a30c18lM9sE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emirti_splash_text">أول منصة إماراتية تجمع التجار</string>
    <string name="the_first_emirati_platform_n_that_brings_together_merchants">The first Emirati platform \n that brings together merchants</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log In</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="phone">Phone</string>
    <string name="_971">+971</string>
    <string name="email">Email</string>
    <string name="about_us_one">The first Emirati platform that brings together merchants</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="password">Password</string>
    <string name="enter_a_valid_password">Enter a valid password</string>
    <string name="forgotPassword1">Forgot password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="please_enter_your_registered_phone_number_n_and_an_otp_will_be_sent">Please enter your registered phone number \n And an OTP will be sent.</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_registered_mobile_number">Enter registered mobile number</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="verification">Verification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="dont_have_an_account_yet">Do not have an account yet ?</string>
    <string name="logo_photo">Logo / Photo</string>
    <string name="verify">Verify</string>
    <string name="please_verify_with_your_phone_number_by_submitting_the_otp_sent_on_the_same_below">Please verify with your phone number by submitting the OTP sent on the same below.</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_new_password_and_confirm_password_for_reset_password">Please enter your new password and confirm password for reset password</string>
    <string name="jlt_cluster_m_dubai">JLT, Cluster M, Dubai</string>
    <string name="location">Location</string>
    <string name="countries_serving">Countries Serving:</string>
    <string name="products">Products</string>
    <string name="no_categories_found">No categories found</string>
    <string name="categories">Categories</string>
    <string name="categories_side_menu">Categories</string>
    <string name="category">Category</string>
    <string name="category_one">Category</string>
    <string name="hayley_williams">Hayley Williams</string>
    <string name="hayleywilliams_gmail_com">hayleywilliams@gmail.com</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="brands">Brands</string>
    <string name="name">Name</string>
    <string name="brand_name">Brand name</string>
    <string name="gadgets">Gadgets</string>
    <string name="dubai_uae">Dubai, UAE</string>
    <string name="bloggers">Bloggers</string>
    <string name="homemade_suppliers">HomeMade Suppliers</string>
    <string name="global_market">Global Market</string>
    <string name="gallery">Gallery</string>
    <string name="health_and_beauty">Health and Beauty</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="oman">Oman</string>
    <string name="kuwait">Kuwait</string>
    <string name="bahrain">Bahrain</string>
    <string name="notifications">Notifications</string>
    <string name="your_order_has_been_shipped">Your order has been shipped</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="there_is_no_notifications">There is no notifications</string>
    <string name="you_are_all_caught_up_for_now">You are all caught up for now.</string>
    <string name="contact_us">Contact Us</string>
    <string name="get_in_touch">GET IN TOUCH</string>
    <string name="feel_free_to_contact_us_anytime_we_will_get_back_to_you_as_soon_as_we_can">Feel free to contact us anytime. We will get back to you as soon as we can!</string>
    <string name="email_address">Email address</string>
    <string name="message">Message</string>
    <string name="share_as_supplier">Share as Supplier</string>
    <string name="change_password">Change password</string>
    <string name="save_password">Save password</string>
    <string name="password_must_contain_atleast">Password must contain atleast</string>
    <string name="one_uppercase_letter">* One uppercase letter</string>
    <string name="one_lowercase_letter">* One lowercase letter</string>
    <string name="one_number">* One number</string>
    <string name="atleast_6_characters_long">* Atleast 6 characters long</string>
    <string name="new_password">New Password:</string>
    <string name="old_password">Old Password:</string>
    <string name="verify_new_password">Verify New Password:</string>
    <string name="passwords_matched">Passwords matched!</string>
    <string name="verify_password">Verify password</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="emojis_are_not_allowed">Emoji\'s are not allowed</string>
    <string name="please_enter_your_email">Please enter your email address</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_select_your_country_code">Please select your country code</string>
    <string name="please_accept_terms_conditions">Please accept terms and conditions</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="mob_num_length_valid">"Phone number must be 7 – 15 digits"</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_verify_your_password">Please verify  your password</string>
    <string name="please_enter_your_old_password">Please enter your old password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="password_length_valid">Password must contain atleast \n * One uppercase letter \n * One lowercase letter \n * One number \n * Atleast 6 characters long</string>
    <string name="verify_password_length_valid">Verify password length should be minimum 6 characters long</string>
    <string name="password_doesnt_match_with_verify_password">Password doesn\'t match with verify password</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="please_enter_your_otp">Please enter your otp</string>
    <string name="otp_length_valid">Otp length should be equal to 4 characters</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_the_notification">Are you sure you want to delete the notification?</string>
    <string name="there_are_no_notifications">There are no notifications</string>
    <string name="add_photo">Add photo !!</string>
    <string name="contact_number">Contact Number</string>
    <string name="profile">Profile</string>
    <string name="add_location">Add Location</string>
    <string name="add_new_location">Add New Location</string>
    <string name="add_card_details">Add Card Details</string>
    <string name="change_password_caps">Change Password</string>
    <string name="privacy_and_policy">privacy and policy</string>
    <string name="privacy_and_policy_one">privacy and policy</string>
    <string name="general_information">General Information</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="faq">FAQ</string>
    <string name="faq_text">Frequently Asked Questions</string>
    <string name="my_cart">My cart</string>
    <string name="subtotal">Subtotal:</string>
    <string name="shipping_fee">Shipping Fee:</string>
    <string name="aed_1_500_00">AED 1,500.00</string>
    <string name="aed_0_00">AED 0.00</string>
    <string name="total_price">Total price:</string>
    <string name="checkout">Checkout</string>
    <string name="product_name">Product Name</string>
    <string name="supplier_name">Supplier details</string>
    <string name="_10_off">10% off</string>
    <string name="offers_and_discounts">Offers and discounts</string>
    <string name="please_choose_your_language">Please choose your language</string>
    <string name="please_first_enter_your_password">please first enter your password</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_amp_conditions_apply"><![CDATA[Terms & Conditions Apply]]></string>
    <string name="i_accept">I accept the</string>
    <string name="settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="continue_as_a_guest_user">Continue as a Guest User</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="apply">Apply</string>
    <string name="coupon_name">Coupon Name</string>
    <string name="valid_on_orders_with_items_worth_aed">Valid on orders with items worth AED</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="filter">Filter</string>
    <string name="search_in_seen">Search in Seen</string>
    <string name="lowest_highest">LOWEST - HIGHEST</string>
    <string name="brand">Brand</string>
    <string name="filtered_search_results">Filtered search results</string>
    <string name="all">ALL</string>
    <string name="get_20_off_upto_aed_150">Get 20% off upto AED 150</string>
    <string name="location_access_is_mandate_to_get_the_data">Location access is mandate to get the data</string>
    <string name="location_access">Location Access:</string>
</resources>