<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtCouponName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coupon_name"
        android:fontFamily="@font/expressway_rg"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:maxLines="1"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:ellipsize="end"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintStart_toEndOf="@+id/imgCoupon"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/imgCoupon"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txtCouponCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coupon_code"
        android:fontFamily="@font/expressway_rg"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:ellipsize="end"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintStart_toEndOf="@+id/imgCoupon"
        app:layout_constraintTop_toBottomOf="@+id/txtCouponName"
        />
    <TextView
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textDirection="locale"
        android:fontFamily="@font/expressway_rg"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/gold"
        android:padding="@dimen/_3sdp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/txtDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_20_off_upto_aed_150"
        android:maxLines="2"
        android:ellipsize="end"
        android:fontFamily="@font/expressway_rg"
        android:textSize="@dimen/_10ssp"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCouponCode"
        />
    <TextView
        android:id="@+id/txtValidDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valid_on_orders_with_items_worth_aed"
        android:fontFamily="@font/expressway_rg"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/txt_gray"
        android:maxLines="2"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:layout_marginTop="@dimen/_2sdp"
        android:ellipsize="end"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscount"
        />
    <TextView
        android:id="@+id/txtTC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_amp_conditions_apply"
        android:fontFamily="@font/expressway_rg"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValidDesc"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtTC"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>