<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/expressway_rg"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="#262626"
            android:textSize="@dimen/_15ssp"
            />

        <TextView
            android:id="@+id/ok"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/gold"
            android:fontFamily="@font/expressway_rg"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/gold"
            android:fontFamily="@font/expressway_rg"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />


    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/white"
        app:civ_border_width="4dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>