<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_6sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FilteredProductsFragment">

    <LinearLayout
        android:id="@+id/loc_filter_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_8sdp"
        android:weightSum="1">
        <RelativeLayout
            android:id="@+id/loc_view"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@drawable/gray_curved_rect_box">
            <ImageView
                android:id="@+id/imgSearch_iv"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/search_gray_icon"
                android:rotation="270"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/imgSearch_iv"
                android:hint="@string/search_in_seen"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/dark_gray"
                android:background="@android:color/transparent"
                android:textSize="@dimen/_9ssp"
                android:fontFamily="@font/expressway_rg"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:inputType="text"
                android:ellipsize="end"
                android:imeOptions="actionDone"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@drawable/gray_curved_rect_box">
            <ImageView
                android:id="@+id/iv_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/filter_icon"
                android:contentDescription="@string/filter" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/filtered_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_below="@id/loc_filter_view"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/loc_filter_view">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtered_search_results"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/expressway_rg"
        android:textColor="@color/gray_color"
        android:textStyle="bold"
        android:padding="@dimen/_6sdp"/>

        <TextView
            android:id="@+id/tv_filterSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowest_highest"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/expressway_rg"
            android:textColor="@color/gray_color"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_6sdp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/selector_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/filtered_layout"
        android:layout_below="@+id/filtered_layout"
        android:background="@drawable/transparent_gray_outer_rect_box_curved"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/selector_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all"
            android:textStyle="normal"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/down_arrow_icon"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/expressway_rg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selector_categories_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selector_layout"
        android:layout_below="@+id/selector_layout"
        android:background="@drawable/transparent_gray_outer_rect_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_6sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/all_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/all"
            android:textStyle="normal"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center_vertical"
            android:fontFamily="@font/expressway_rg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/bloggers_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/bloggers"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:fontFamily="@font/expressway_rg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/homemadesuppliers_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/homemade_suppliers"
            android:textStyle="normal"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:fontFamily="@font/expressway_rg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/brands_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/brand"
            android:textStyle="normal"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:gravity="center_vertical"
            android:fontFamily="@font/expressway_rg"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/selector_categories_layout"
        android:layout_marginHorizontal="@dimen/_8sdp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_filtered_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:scrollbars="vertical"/>
    </ScrollView>

</RelativeLayout>