<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_signup_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/big_logo"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/gold_filled_rect_box"
        android:fontFamily="@font/expressway_rg"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="false"
        android:elevation="@dimen/_5sdp"
        android:text="@string/log_in"/>
    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/gold_rect_box"
        android:fontFamily="@font/expressway_rg"
        android:includeFontPadding="false"
        android:textColor="@color/gold"
        android:layout_marginBottom="@dimen/_70sdp"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:elevation="@dimen/_5sdp"
        android:text="@string/sign_up"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/btnGuestUser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/expressway_rg"
        android:includeFontPadding="false"
        android:textColor="@color/gold"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:textSize="@dimen/_16ssp"
        android:textAllCaps="false"
        android:elevation="@dimen/_5sdp"
        android:text="@string/continue_as_a_guest_user"/>
</androidx.constraintlayout.widget.ConstraintLayout>